--- a/src/main/resources/templates/show.html
+++ b/src/main/resources/templates/show.html
@@ -72,7 +72,7 @@
             <td>
                 <div class="nav-item">
                     <span>
-                    <a th:href="@{/update/{id}(id=${jacket.id})}">Update</a>
+                    <a th:href="@{/updatejacket/{id}(id=${jacket.id})}">Update</a>
                     <a th:href="@{/deletejacket/{id}(id=${jacket.id})}">Delete</a>
                 </span>
                 </div>
@@ -107,7 +107,7 @@
             <td>
                 <div class="nav-item">
                     <span>
-                    <a th:href="@{/update/{id}(id=${bottom.id})}">Update</a>
+                    <a th:href="@{/updatebottom/{id}(id=${bottom.id})}">Update</a>
                     <a th:href="@{/deletebottom/{id}(id=${bottom.id})}">Delete</a>
                 </span>
                 </div>
@@ -142,7 +142,7 @@
             <td>
                 <div class="nav-item">
                     <span>
-                    <a th:href="@{/update/{id}(id=${footwear.id})}">Update</a>
+                    <a th:href="@{/updatefootwear/{id}(id=${footwear.id})}">Update</a>
                     <a th:href="@{/deletefootwear/{id}(id=${footwear.id})}">Delete</a>
                 </span>
                 </div>
@@ -176,7 +176,7 @@
             <td>
                 <div class="nav-item">
                     <span>
-                    <a th:href="@{/update/{id}(id=${accessory.id})}">Update</a>
+                    <a th:href="@{/updateaccessary/{id}(id=${accessory.id})}">Update</a>
                     <a th:href="@{/deleteaccessory/{id}(id=${accessory.id})}">Delete</a>
                 </span>
                 </div>
