--- a/src/main/resources/templates/show.html
+++ b/src/main/resources/templates/show.html
@@ -6,14 +6,14 @@
 
 </head>
 <body>
-<div><h2>Welcome [[${user.firstName}]] [[${user.lastName}]] </h2></div>
+<!--<div><h2>Welcome [[${user.firstName}]] [[${user.lastName}]] </h2></div>-->
 </br>
 <div th:replace="base :: navlinks"></div>
 
 
-<h2>Title: <span th:text="${closet.closetName}"></span></h2> <br/>
+<h3>Title: <span th:text="${closet.closetName}"></span></h3> <br/>
 <div class="container">
-    <h1>Tops</h1>
+    <h4>Tops</h4>
     <table class="table table-bordered">
         <thead>
         <tr>
@@ -31,8 +31,8 @@
             <td th:text="${top.color}"></td>
             <td th:text="${top.material}"></td>
             <td th:text="${top.size}"></td>
-            <td th:text="${top.category}"></td>
             <td th:text="${top.season}"></td>
+            <td th:text="${top.category}"></td>
             <td><img th:src="${top.imgUrl}" height="50" width="50"/></td>
             <td>
                 <div class="nav-item">
@@ -48,7 +48,7 @@
     </table>
 </div>
 <div class="container">
-    <h1>Jackets</h1>
+    <h4>Jackets</h4>
     <table class="table table-bordered">
         <thead>
         <tr>
@@ -83,7 +83,7 @@
     </table>
 </div>
 <div class="container">
-    <h1>Bottoms</h1>
+    <h4>Bottoms</h4>
     <table class="table table-bordered">
         <thead>
         <tr>
@@ -117,7 +117,7 @@
     </table>
 </div>
 <div class="container">
-    <h1>Footwear</h1>
+    <h4>Footwear</h4>
     <table class="table table-bordered">
         <thead>
         <tr>
@@ -152,7 +152,7 @@
     </table>
 </div>
 <div class="container">
-    <h1>Accessories</h1>
+    <h4>Accessories</h4>
     <table class="table table-bordered">
         <thead>
         <tr>
