--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -8,7 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 </head>
 <body>
-
+<h2 id="demoDay"></h2>
 <div th:fragment="navlinks">
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark mb-3 justify-content-end">
         <ul class="navbar-nav">
