--- a/src/main/resources/templates/bottomform.html
+++ b/src/main/resources/templates/bottomform.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang ="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="www.thymeleaf.org/extras/spring-security">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -8,54 +8,54 @@
 <body>
 <div th:replace="base :: navlinks"></div>
 <div class="container">
-<form action="#"
-      th:action="@{/processbottom}"
-      th:object="${bottom}"
-      enctype="multipart/form-data"
-      method="POST">
-    <input type="hidden" th:field="*{id}" />
-    <p>
-        Closet:<select th:field="*{closet}">
-        <option th:each="closet : ${closets}"
-                th:value="${closet.id}"
-                th:text="${closet.closetName}"></option>
-    </select>
-        Color: <input type="text" th:field="*{color}" />
-        <span th:if="${#fields.hasErrors('color')}" th:errors="*{color}"></span> <br/>
+    <form action="#"
+          th:action="@{/processbottom}"
+          th:object="${bottom}"
+          enctype="multipart/form-data"
+          method="POST">
+        <input type="hidden" th:field="*{id}"/>
+        <p>
+            Closet:<select th:field="*{closet}">
+            <option th:each="closet : ${closets}"
+                    th:value="${closet.id}"
+                    th:text="${closet.closetName}"></option>
+        </select>
+            Color: <input type="text" th:field="*{color}"/>
+            <span th:if="${#fields.hasErrors('color')}" th:errors="*{color}"></span> <br/>
 
-        Material: <input type="text" th:field="*{material}" />
-        <span th:if="${#fields.hasErrors('material')}" th:errors="*{material}"></span> <br/>
+            Material: <input type="text" th:field="*{material}"/>
+            <span th:if="${#fields.hasErrors('material')}" th:errors="*{material}"></span> <br/>
 
-        Size: <input type="text" th:field="*{size}" />
-        <span th:if="${#fields.hasErrors('size')}" th:errors="*{size}"></span> <br/>
+            Size: <input type="text" th:field="*{size}"/>
+            <span th:if="${#fields.hasErrors('size')}" th:errors="*{size}"></span> <br/>
 
-        Type: <select th:field="*{type}">
-        <option th:value="'pants'"  th:text="Pants"></option>
-        <option th:value="'shorts'" th:text="Shorts"></option>
-        <option th:value="'skirts'" th:text="Skirts"></option>
+            Type: <select th:field="*{type}">
+            <option th:value="'pants'" th:text="Pants"></option>
+            <option th:value="'shorts'" th:text="Shorts"></option>
+            <option th:value="'skirts'" th:text="Skirts"></option>
         </select>
 
-        Category: <select th:field="*{category}">
-        <option th:value="'formal'"  th:text="Formal"></option>
-        <option th:value="'informal'" th:text="Informal"></option>
+            Category: <select th:field="*{category}">
+            <option th:value="'formal'" th:text="Formal"></option>
+            <option th:value="'informal'" th:text="Informal"></option>
         </select>
 
-        <select th:field="*{season}">
-            <option th:value="'Spring'" th:text="Spring"></option>
-            <option th:value="'Summer'" th:text="Summer"></option>
-            <option th:value="'Fall'" th:text="Fall"></option>
-            <option th:value="'Winter'" th:text="Winter"></option>
-        </select>
-        <label for="file">Choose file to upload</label>
-        <input type="file" id="file" name="file" /><br/><br/>
+            <select th:field="*{season}">
+                <option th:value="'Spring'" th:text="Spring"></option>
+                <option th:value="'Summer'" th:text="Summer"></option>
+                <option th:value="'Fall'" th:text="Fall"></option>
+                <option th:value="'Winter'" th:text="Winter"></option>
+            </select>
+            <label for="file">Choose file to upload</label>
+            <input type="file" id="file" name="file"/><br/><br/>
 
-    <div th:if="*{imgUrl}" != null>
-        <img th:src ="*{imgUrl}" />
-        <hr />
-    </div>
-    <input type="submit" value="Submit" />
-    </p>
-</form>
+        <div th:if="*{imgUrl}" !=null>
+            <img th:src="*{imgUrl}"/>
+            <hr/>
+        </div>
+        <input type="submit" value="Submit"/>
+        </p>
+    </form>
 </div>
 </body>
 </html>
