--- a/src/main/resources/templates/closetform.html
+++ b/src/main/resources/templates/closetform.html
@@ -8,19 +8,19 @@
 <body>
 <!--<div><h2>Welcome [[${user.firstName}]] [[${user.lastName}]] </h2></div></br>-->
 <div th:replace="base :: navlinks"></div>
-
-
-<form action="#"
-      th:action="@{/processcloset}"
-      th:object="${closet}"
-      method="POST">
-    <input type="hidden" th:field="*{id}" />
-    <p>
-        Closet Name: <input type="text" th:field="*{closetName}" />
-        <span th:if="${#fields.hasErrors('closetName')}" th:errors="*{closetName}"></span> <br/>
-        <input type="submit" value="Submit" />
-    </p>
-</form>
+<div class="container">
+    <form action="#"
+          th:action="@{/processcloset}"
+          th:object="${closet}"
+          method="POST">
+        <input type="hidden" th:field="*{id}"/>
+        <p>
+            Closet Name: <input type="text" th:field="*{closetName}"/>
+            <span th:if="${#fields.hasErrors('closetName')}" th:errors="*{closetName}"></span> <br/>
+            <input type="submit" value="Submit"/>
+        </p>
+    </form>
+</div>
 <div th:replace="base :: bootstrap-js"></div>
 </body>
 </html>
