--- a/src/main/resources/templates/topform.html
+++ b/src/main/resources/templates/topform.html
@@ -6,7 +6,8 @@
     <th:block th:insert="base :: header"></th:block>
 </head>
 <body>
-
+<div th:replace="base :: navlinks"></div>
+<div class="container">
 <form action="#"
       th:action="@{/processtop}"
       th:object="${top}"
@@ -56,6 +57,6 @@
     </p>
 </form>
 
-
+</div>
 </body>
 </html>
