--- a/src/main/resources/templates/accessoryform.html
+++ b/src/main/resources/templates/accessoryform.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <th:block th:insert="base :: header"></th:block>
 </head>
 <body>
+<div th:replace="base :: navlinks"></div>
+<div class="container">
 <form action="#"
       th:action="@{/processaccessory}"
       th:object="${accessory}"
@@ -47,6 +50,6 @@
     <input type="submit" value="Submit" />
     </p>
 </form>
-
+</div>
 </body>
 </html>
