--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -48,6 +48,52 @@
         </ul>
     </nav>
 </div>
+<div th:fragment="weather">
+    <script>
+        const key = 'b597a1dea2517708cda27cc435a1daca';
+        if (key == '') document.getElementById('temp').innerHTML = ('Remember to add your api key!');
+
+        function weatherBallon(cityName) {
+            fetch('https://api.openweathermap.org/data/2.5/weather?q=' + cityName + '&appid=' + key)
+                .then(function (resp) {
+                    return resp.json()
+                }) // Convert data to json
+                .then(function (data) {
+                    drawWeather(data);
+                })
+                .catch(function () {
+                    // catch any errors
+                });
+        }
+
+        function drawWeather(d) {
+            var celcius = Math.round(parseFloat(d.main.temp) - 273.15);
+            var fahrenheit = Math.round(((parseFloat(d.main.temp) - 273.15) * 1.8) + 32);
+            //var description = d.weather[0].description;
+            var location = d.name.concat(", ", d.sys.country);
+
+            //document.getElementById('description').innerHTML = description;
+            document.getElementById('temp').innerHTML = fahrenheit;
+            document.getElementById('location').innerHTML = d.name;
+            //document.getElementById('city').innerHTML = location;
+
+            if (description.indexOf('rain') > 0) {
+                document.body.className = 'rainy';
+            } else if (description.indexOf('cloud') > 0) {
+                document.body.className = 'cloudy';
+            } else if (description.indexOf('sunny') > 0) {
+                document.body.className = 'sunny';
+            } else {
+                document.body.className = 'clear';
+            }
+        }
+
+        window.onload = function (location) {
+
+            weatherBallon(location);
+        }
+    </script>
+</div>
 <div th:fragment="bootstrap-js">
     <script>
         var d = new Date();
