--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,7 +4,25 @@
     <title>Login</title>
     <th:block th:insert="base :: header"></th:block>
 </head>
+<style>
+    body {
+        height: 10%;
+        margin: 200px;
+
+        background-image: url("https://www.designmantic.com/logo-images/166857.png?company=Doctor+Strange&slogan=&verify=1");
+
+        /* Full height */
+        /*height: 100%;*/
+
+        /* Center and scale the image nicely */
+        /*background-position: bottom;*/
+        background-repeat: no-repeat;
+        background-size: unset;
+    }
+</style>
 <body>
+
+
 
     <div th:replace="base :: navlinks"></div>
 
