--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -24,6 +24,9 @@
             <li class="nav-item" sec:authorize="isAuthenticated()">
                 <a class="nav-link" href="/addcloset">Add New Closet</a>
             </li>
+            <li class="nav-item" sec:authorize="isAuthenticated()">
+                <a class="nav-link" href="/addpackinglist">Pack for Trip</a>
+            </li>
             <li class="nav-item dropdown" sec:authorize="isAuthenticated()">
                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
                    aria-expanded="false">Add Item</a>
