adding html changes.

--- a/src/main/resources/templates/packingitem.html
+++ b/src/main/resources/templates/packingitem.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="www.thymeleaf.org/extras/spring-security">
 <head>
-    <meta charset="UTF-8">
-    <title>Packing items from closet [[${selectedcloset.closetName}]]</title>
+    <title>Closet Application</title>
+    <th:block th:insert="base :: header"></th:block>
 </head>
+<body>
+
+<div th:replace="base :: navlinks"></div>
 
 <div class="container">
-<h2>Title: <span th:text="${selectedcloset.closetName}"></span></h2> <br/>
+<h3>Title: <span th:text="${pcloset.closetName}"></span></h3> <br/>
 
     <form action="#"
           th:action="@{/processpackingitem}"
@@ -183,9 +186,7 @@
         </p>
     </form>
 
+
 </div>
-
-<body>
-
 </body>
 </html>
