--- a/src/main/resources/templates/packinglist.html
+++ b/src/main/resources/templates/packinglist.html
@@ -6,11 +6,12 @@
 
 </head>
 <body>
-<div class="container">
-<div><h2>Welcome [[${user.firstName}]] [[${user.lastName}]] </h2></div>
-</br>
 
 <div th:replace="base :: navlinks"></div>
+
+<h3>Title: <span th:text="${pcloset.closetName}"></span></h3> <br/>
+
+<div class="container">
     <form action="#"
           th:action="@{/processpackinglist}"
           method="POST">
@@ -27,7 +28,6 @@
         </p>
     </form>
 </div>
-
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
