--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -71,11 +71,11 @@
             var fahrenheit = Math.round(((parseFloat(d.main.temp) - 273.15) * 1.8) + 32);
             //var description = d.weather[0].description;
             var location = d.name.concat(", ", d.sys.country);
-
             //document.getElementById('description').innerHTML = description;
             document.getElementById('temp').innerHTML = fahrenheit;
-            document.getElementById('location').innerHTML = d.name;
+            // document.getElementById('location').innerHTML = d.name;
             //document.getElementById('city').innerHTML = location;
+
 
             if (description.indexOf('rain') > 0) {
                 document.body.className = 'rainy';
@@ -92,6 +92,8 @@
 
             weatherBallon(location);
         }
+
+
     </script>
 </div>
 <div th:fragment="bootstrap-js">
