--- a/src/main/resources/templates/userclosetform.html
+++ b/src/main/resources/templates/userclosetform.html
@@ -13,9 +13,10 @@
         <form action="#" th:action="@{/process}" th:object="${user}"
               method="post"enctype="multipart/form-data" >
             <input type="hidden" th:field="*{id}"/>
-
+            <h2 id="temp" name="temp"></h2>
             <label for="location">Location: </label>
-            <input id="location" type="text" name="temp"/><br/>
+            <input id="location" type="text"/><br/>
+            <button type="submit" onclick="weatherBallon(document.getElementById('location').value)">Locate Me</button>
 
             <lable for="occasion">Occasion:</lable>
             <select id="occasion" name="occasion" />
@@ -24,7 +25,7 @@
             </select><br />
 
 <!--            <input type="submit" value="Submit"/>-->
-            <input type="submit" value="Submit" onclick="weatherBallon(document.getElementById('location').value)"/>
+            <input type="submit" value="Submit"/>
         </form>
     </div>
     <div class="col-3"></div>
