--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -54,7 +54,7 @@
 <div th:fragment="weather">
     <script>
         const key = 'b597a1dea2517708cda27cc435a1daca';
-        if (key == '') document.getElementById('temp').innerHTML = ('Remember to add your api key!');
+        if (key == '') document.getElementById('location').innerHTML = ('Remember to add your api key!');
 
         function weatherBallon(cityName) {
             fetch('https://api.openweathermap.org/data/2.5/weather?q=' + cityName + '&appid=' + key)
@@ -72,12 +72,17 @@
         function drawWeather(d) {
             var celcius = Math.round(parseFloat(d.main.temp) - 273.15);
             var fahrenheit = Math.round(((parseFloat(d.main.temp) - 273.15) * 1.8) + 32);
-            //var description = d.weather[0].description;
+            var description = d.weather[0].description;
             var location = d.name.concat(", ", d.sys.country);
-            //document.getElementById('description').innerHTML = description;
-            document.getElementById('temp').innerHTML = fahrenheit;
+
+
+            // document.getElementById('description').innerHTML = description;
+            document.getElementById('temp').innerHTML = fahrenheit + '&deg;';
+            document.getElementById('temperature').innerHTML = fahrenheit;
+            document.forms.namedItem('temperature').innerHTML = fahrenheit;
+
             // document.getElementById('location').innerHTML = d.name;
-            //document.getElementById('city').innerHTML = location;
+            document.getElementById('location').innerHTML = location;
 
 
             if (description.indexOf('rain') > 0) {
@@ -92,7 +97,6 @@
         }
 
         window.onload = function (location) {
-
             weatherBallon(location);
         }
 
