--- a/src/main/resources/templates/userclosetform.html
+++ b/src/main/resources/templates/userclosetform.html
@@ -10,12 +10,17 @@
 <div class="container">
     <div class="col-3"></div>
     <div class="col-6 pt-6">
+        <div>
+            <h3 id="location"></h3>
+            <h3 id="temp" name="temp"></h3>
+            <label for="userlocation">Location: </label>
+            <input id="userlocation" type="text"/><br/>
+            <input type="submit" value="Today's Weather" onclick="weatherBallon(document.getElementById('userlocation').value)"/>
+        </div>
         <form action="#" th:action="@{/process}" th:object="${user}"
-              method="post"enctype="multipart/form-data" >
+              method="post" enctype="multipart/form-data" >
+            <input type="hidden" id="temperature" name="temperature"/>
             <input type="hidden" th:field="*{id}"/>
-            <label for="location">Location: </label>
-            <input id="location" type="text" name="location"/><br/>
-
             <lable for="occasion">Occasion:</lable>
             <select id="occasion" name="occasion" />
             <option value="formal">Formal</option>
