--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,44 +3,47 @@
 <head>
     <title>Login</title>
     <th:block th:insert="base :: header"></th:block>
+    <head>
+        <title>Bootstrap Example</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    </head>
 </head>
-<style>
-    body {
-        height: 10%;
-        margin: 200px;
 
-        background-image: url("https://www.designmantic.com/logo-images/166857.png?company=Doctor+Strange&slogan=&verify=1");
-
-        /* Full height */
-        /*height: 100%;*/
-
-        /* Center and scale the image nicely */
-        /*background-position: bottom;*/
-        background-repeat: no-repeat;
-        background-size: unset;
-    }
-</style>
 <body>
 
+<div th:replace="base :: navlinks"></div>
+<div class="container">
+    </br> </br>
+
+    <h4>What to wear? These clothes manager app helps you dress better for work or play
+        — based on your wardrobe and the weather</h4></br></br>
+
+</div>
+
+<img src="https://previews.123rf.com/images/lenm/lenm1406/lenm140600069/28829940-図は、服を搭載ラック女性服の完全な.jpg" alt="Paris"
+     width="500" height="300" class="mx-auto d-block">
 
 
-    <div th:replace="base :: navlinks"></div>
+<div th:if="${param.error}">
+    Invalid username and password.
+</div>
+<div th:if="${param.logout}">
+    You have been logged out.
+</div>
 
-    <div th:if="${param.error}">
-        Invalid username and password.
+<form th:action="@{/login}" method="post">
+    <div>
+        <label>User Name: <input type="text" name="username"/></label>
     </div>
-    <div th:if="${param.logout}">
-        You have been logged out.
+    <div>
+        <label>Password: <input type="password" name="password"/></label>
     </div>
-    <form th:action="@{/login}" method="post">
-        <div>
-            <label>User Name: <input type="text" name="username"/></label>
-        </div>
-        <div>
-            <label>Password: <input type="password" name="password"/></label>
-        </div>
-        <div><input type="submit" value="Sign In"/></div>
-    </form>
-
+    <div><input type="submit" value="Sign In"/></div>
+</form>
 </body>
 </html>
