--- a/src/main/resources/templates/userclosetform.html
+++ b/src/main/resources/templates/userclosetform.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>Today's Outfit</title>
@@ -15,13 +15,19 @@
             <input type="hidden" th:field="*{id}"/>
 
             <label for="location">Location: </label>
-            <input id="location" type="text" name="temp"/><br/>
+            <input id="location" type="text" name="location" value="rockville"/><br/>
 
             <lable for="occasion">Occasion:</lable>
             <select id="occasion" name="occasion" />
             <option value="formal">Formal</option>
             <option value="informal">Informal</option>
             </select><br />
+            <!--input type="hidden" name="selectedtops" value="checked"-->
+            <div id="weather" >
+                <div id="description"></div>
+                <input type="hidden" id="temp" name="temp" />
+                <div id="location"></div>
+            </div>
 
 <!--            <input type="submit" value="Submit"/>-->
             <input type="submit" value="Submit" onclick="weatherBallon(document.getElementById('location').value)"/>
@@ -30,7 +36,55 @@
     <div class="col-3"></div>
 
 </div>
-<div th:replace="base :: weather"></div>
+<script>
+
+    const key = 'b5bea8437fc25cb64be9c9527b80bc18';
+    if (key == '') document.getElementById('temp').innerHTML = ('Remember to add your api key!');
+
+    function weatherBallon(cityName) {
+        fetch('https://api.openweathermap.org/data/2.5/weather?q=' + cityName + '&appid=' + key)
+            .then(function (resp) {
+                return resp.json()
+            }) // Convert data to json
+            .then(function (data) {
+                drawWeather(data);
+            })
+            .catch(function () {
+                // catch any errors
+            });
+    }
+
+    function drawWeather(d) {
+        var celcius = Math.round(parseFloat(d.main.temp) - 273.15);
+        var fahrenheit = Math.round(((parseFloat(d.main.temp) - 273.15) * 1.8) + 32);
+        var description = d.weather[0].description;
+        var location = d.name.concat(", ", d.sys.country);
+
+        document.getElementById('description').innerHTML = description;
+        document.getElementById('temp').innerHTML = fahrenheit ;
+        document.getElementById('temp').value = fahrenheit;
+        document.write("The temperature is set to "+fahrenheit);
+        document.getElementById('location').innerHTML = d.name;
+        document.getElementById('city').innerHTML = location;
+
+        if (description.indexOf('rain') > 0) {
+            document.body.className = 'rainy';
+        } else if (description.indexOf('cloud') > 0) {
+            document.body.className = 'cloudy';
+        } else if (description.indexOf('sunny') > 0) {
+            document.body.className = 'sunny';
+        } else {
+            document.body.className = 'clear';
+        }
+    }
+
+    window.onload = function (location) {
+
+        weatherBallon(location);
+    }
+</script>
+
+<!--div th:replace="base :: weather"></div-->
 <div th:replace="base :: bootstrap-js"></div>
 </body>
 </html>
