pulling master's updates

--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -79,7 +79,7 @@
             // document.getElementById('description').innerHTML = description;
             document.getElementById('temp').innerHTML = fahrenheit + '&deg;';
             document.getElementById('temperature').innerHTML = fahrenheit;
-            document.forms.namedItem('temperature').innerHTML = fahrenheit;
+            document.forms.namedItem('temperature'). = fahrenheit;
 
             // document.getElementById('location').innerHTML = d.name;
             document.getElementById('location').innerHTML = location;
